--- a/silver_contract/views/contract_template_wp_views.xml
+++ b/silver_contract/views/contract_template_wp_views.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
-        <!-- contract.template.wp tree view -->
+        <!-- contract.template.wp list view -->
         <record id="contract_template_wp_view_tree" model="ir.ui.view">
-            <field name="name">contract.template.wp.view.tree</field>
+            <field name="name">contract.template.wp.view.list</field>
             <field name="model">contract.template.wp</field>
             <field name="arch" type="xml">
                 <list>
@@ -31,7 +31,7 @@
         <record id="contract_template_wp_action" model="ir.actions.act_window">
             <field name="name">Plantillas de WhatsApp</field>
             <field name="res_model">contract.template.wp</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <menuitem id="contract_template_wp_menu" name="Plantillas de WhatsApp" parent="silver_contract_configuration_menu" action="contract_template_wp_action" sequence="120"/>
