--- a/silver_network/views/address_list_channel_line_views.xml
+++ b/silver_network/views/address_list_channel_line_views.xml
@@ -5,11 +5,11 @@
         <record id="action_address_list_channel_line" model="ir.actions.act_window">
             <field name="name">Líneas de Canal de Lista de Direcciones</field>
             <field name="res_model">address.list.channel.line</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_address_list_channel_line_tree" model="ir.ui.view">
-            <field name="name">address.list.channel.line.tree</field>
+            <field name="name">address.list.channel.line.list</field>
             <field name="model">address.list.channel.line</field>
             <field name="arch" type="xml">
                 <list string="Líneas de Canal de Lista de Direcciones">
