--- a/silver_provisioning/views/silver_node_views.xml
+++ b/silver_provisioning/views/silver_node_views.xml
@@ -6,10 +6,10 @@
             <field name="model">silver.node</field>
             <field name="inherit_id" ref="silver_network.view_silver_node_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='core_ids']/tree/field[@name='ip']" position="after">
+                <xpath expr="//field[@name='core_ids']/list/field[@name='ip']" position="after">
                     <field name="contract_ids" widget="one2many" />
                 </xpath>
-                 <xpath expr="//field[@name='olt_ids']/tree/field[@name='ip']" position="after">
+                 <xpath expr="//field[@name='olt_ids']/list/field[@name='ip']" position="after">
                     <field name="contract_ids" widget="one2many" />
                 </xpath>
                 <xpath expr="//page[@name='naps']" position="after">
