--- a/silver_collections/views/payment_transaction_views.xml
+++ b/silver_collections/views/payment_transaction_views.xml
@@ -37,7 +37,7 @@
     </record>
 
     <record id="view_payment_transaction_tree" model="ir.ui.view">
-        <field name="name">payment.transaction.tree</field>
+        <field name="name">payment.transaction.list</field>
         <field name="model">payment.transaction</field>
         <field name="arch" type="xml">
             <list create="false">
@@ -55,7 +55,7 @@
     <record id="action_payment_transaction" model="ir.actions.act_window">
         <field name="name">Transacciones de Pago</field>
         <field name="res_model">payment.transaction</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <menuitem id="menu_payment_transaction"
