--- a/silver_contract/views/silver_contract_holding_views.xml
+++ b/silver_contract/views/silver_contract_holding_views.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
-        <!-- silver.contract.holding tree view -->
+        <!-- silver.contract.holding list view -->
         <record id="silver_contract_holding_view_tree" model="ir.ui.view">
-            <field name="name">silver.contract.holding.view.tree</field>
+            <field name="name">silver.contract.holding.view.list</field>
             <field name="model">silver.contract.holding</field>
             <field name="arch" type="xml">
                 <list>
@@ -40,7 +40,7 @@
         <record id="silver_contract_holding_action" model="ir.actions.act_window">
             <field name="name">Contract Holdings</field>
             <field name="res_model">silver.contract.holding</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
     </data>
 </odoo>
