--- a/silver_contract/views/silver_contract_tag_views.xml
+++ b/silver_contract/views/silver_contract_tag_views.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
-        <!-- silver.contract.tag tree view -->
+        <!-- silver.contract.tag list view -->
         <record id="silver_contract_tag_view_tree" model="ir.ui.view">
-            <field name="name">silver.contract.tag.view.tree</field>
+            <field name="name">silver.contract.tag.view.list</field>
             <field name="model">silver.contract.tag</field>
             <field name="arch" type="xml">
                 <list>
@@ -34,7 +34,7 @@
         <record id="silver_contract_tag_action" model="ir.actions.act_window">
             <field name="name">Contract Tags</field>
             <field name="res_model">silver.contract.tag</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
     </data>
 </odoo>
