--- a/silver_contract/views/silver_contract_term_views.xml
+++ b/silver_contract/views/silver_contract_term_views.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
-        <!-- silver.contract.term tree view -->
+        <!-- silver.contract.term list view -->
         <record id="silver_contract_term_view_tree" model="ir.ui.view">
-            <field name="name">silver.contract.term.view.tree</field>
+            <field name="name">silver.contract.term.view.list</field>
             <field name="model">silver.contract.term</field>
             <field name="arch" type="xml">
                 <list>
@@ -33,7 +33,7 @@
         <record id="silver_contract_term_action" model="ir.actions.act_window">
             <field name="name">Contract Terms</field>
             <field name="res_model">silver.contract.term</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
     </data>
 </odoo>
