--- a/silver_contract/views/silver_contract_views.xml
+++ b/silver_contract/views/silver_contract_views.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
-        <!-- silver.contract tree view -->
+        <!-- silver.contract list view -->
         <record id="silver_contract_view_tree" model="ir.ui.view">
-            <field name="name">silver.contract.view.tree</field>
+            <field name="name">silver.contract.view.list</field>
             <field name="model">silver.contract</field>
             <field name="arch" type="xml">
                 <list>
@@ -224,7 +224,7 @@
 
 
                                     <group name="related_records" string="Registros Relacionados">
-                                        <field name="referred_line_ids" mode="tree">
+                                        <field name="referred_line_ids" mode="list">
                                             <list editable="bottom">
                                                 <field name="name"/>
                                                 <field name="phone"/>
@@ -276,7 +276,7 @@
         <record id="silver_contract_action" model="ir.actions.act_window">
             <field name="name">Contratos</field>
             <field name="res_model">silver.contract</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     Crea un nuevo contrato de servicio.
