--- a/silver_contract/views/silver_cutoff_date_views.xml
+++ b/silver_contract/views/silver_cutoff_date_views.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
-        <!-- silver.cutoff.date tree view -->
+        <!-- silver.cutoff.date list view -->
         <record id="silver_cutoff_date_view_tree" model="ir.ui.view">
-            <field name="name">silver.cutoff.date.view.tree</field>
+            <field name="name">silver.cutoff.date.view.list</field>
             <field name="model">silver.cutoff.date</field>
             <field name="arch" type="xml">
                 <list>
@@ -277,7 +277,7 @@
         <record id="silver_cutoff_date_action" model="ir.actions.act_window">
             <field name="name">Periodos de Consumo</field>
             <field name="res_model">silver.cutoff.date</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
     </data>
 </odoo>
