--- a/silver_contract/views/silver_cutoff_factor_views.xml
+++ b/silver_contract/views/silver_cutoff_factor_views.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
-        <!-- silver.cutoff.factor tree view -->
+        <!-- silver.cutoff.factor list view -->
         <record id="silver_cutoff_factor_view_tree" model="ir.ui.view">
-            <field name="name">silver.cutoff.factor.view.tree</field>
+            <field name="name">silver.cutoff.factor.view.list</field>
             <field name="model">silver.cutoff.factor</field>
             <field name="arch" type="xml">
                 <list>
@@ -32,7 +32,7 @@
         <record id="silver_cutoff_factor_action" model="ir.actions.act_window">
             <field name="name">Factores de Corte</field>
             <field name="res_model">silver.cutoff.factor</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
     </data>
 </odoo>
