--- a/silver_contract/views/silver_discount_plan_views.xml
+++ b/silver_contract/views/silver_discount_plan_views.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
-        <!-- silver.discount.plan tree view -->
+        <!-- silver.discount.plan list view -->
         <record id="silver_discount_plan_view_tree" model="ir.ui.view">
-            <field name="name">silver.discount.plan.view.tree</field>
+            <field name="name">silver.discount.plan.view.list</field>
             <field name="model">silver.discount.plan</field>
             <field name="arch" type="xml">
                 <list>
@@ -37,7 +37,7 @@
         <record id="silver_discount_plan_action" model="ir.actions.act_window">
             <field name="name">Discount Plans</field>
             <field name="res_model">silver.discount.plan</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
     </data>
 </odoo>
