--- a/silver_contract/views/silver_service_type_views.xml
+++ b/silver_contract/views/silver_service_type_views.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
-        <!-- silver.service.type tree view -->
+        <!-- silver.service.type list view -->
         <record id="silver_service_type_view_tree" model="ir.ui.view">
-            <field name="name">silver.service.type.view.tree</field>
+            <field name="name">silver.service.type.view.list</field>
             <field name="model">silver.service.type</field>
             <field name="arch" type="xml">
                 <list>
@@ -34,7 +34,7 @@
         <record id="silver_service_type_action" model="ir.actions.act_window">
             <field name="name">Service Types</field>
             <field name="res_model">silver.service.type</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
     </data>
 </odoo>
