--- a/silver_contract/views/silver_wifi_channel_line_views.xml
+++ b/silver_contract/views/silver_wifi_channel_line_views.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
-        <!-- silver.wifi.channel.line tree view -->
+        <!-- silver.wifi.channel.line list view -->
         <record id="silver_wifi_channel_line_view_tree" model="ir.ui.view">
-            <field name="name">silver.wifi.channel.line.view.tree</field>
+            <field name="name">silver.wifi.channel.line.view.list</field>
             <field name="model">silver.wifi.channel.line</field>
             <field name="arch" type="xml">
                 <list>
@@ -34,7 +34,7 @@
         <record id="silver_wifi_channel_line_action" model="ir.actions.act_window">
             <field name="name">WiFi Channels</field>
             <field name="res_model">silver.wifi.channel.line</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
     </data>
 </odoo>
