--- a/silver_helpdesk/views/workflow_views.xml
+++ b/silver_helpdesk/views/workflow_views.xml
@@ -3,7 +3,7 @@
     <data>
         <!-- Silver Ticket Type (Process) Views -->
         <record id="view_silver_ticket_type_tree" model="ir.ui.view">
-            <field name="name">silver.ticket.type.tree</field>
+            <field name="name">silver.ticket.type.list</field>
             <field name="model">silver.ticket.type</field>
             <field name="arch" type="xml">
                 <list>
@@ -47,7 +47,7 @@
         <record id="action_silver_ticket_type" model="ir.actions.act_window">
             <field name="name">Tipos de Proceso / Categorías</field>
             <field name="res_model">silver.ticket.type</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <!-- Configuration Menu -->
