--- a/silver_isp_management/views/isp_contract_views.xml
+++ b/silver_isp_management/views/isp_contract_views.xml
@@ -33,7 +33,7 @@
         <record id="silver_isp_management.action_isp_contract" model="ir.actions.act_window">
             <field name="name">Contratos ISP</field>
             <field name="res_model">silver.contract</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
             <!-- Podemos especificar que use las vistas de silver_contract si es necesario -->
             <field name="view_id" ref="silver_contract.view_silver_contract_tree"/>
         </record>
