--- a/silver_network/views/olt_line_product_views.xml
+++ b/silver_network/views/olt_line_product_views.xml
@@ -5,11 +5,11 @@
         <record id="action_olt_line_product" model="ir.actions.act_window">
             <field name="name">Productos de Línea OLT</field>
             <field name="res_model">olt.line.product</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_olt_line_product_tree" model="ir.ui.view">
-            <field name="name">olt.line.product.tree</field>
+            <field name="name">olt.line.product.list</field>
             <field name="model">olt.line.product</field>
             <field name="arch" type="xml">
                 <list string="Productos de Línea OLT">
