--- a/silver_network/views/silver_ap_views.xml
+++ b/silver_network/views/silver_ap_views.xml
@@ -3,7 +3,7 @@
     <data>
 
         <record id="view_silver_ap_tree" model="ir.ui.view">
-            <field name="name">silver.ap.tree</field>
+            <field name="name">silver.ap.list</field>
             <field name="model">silver.ap</field>
             <field name="arch" type="xml">
                 <list string="Equipos AP" default_order="name desc">
@@ -142,7 +142,7 @@
         <record id="action_silver_ap" model="ir.actions.act_window">
             <field name="name">Equipos AP</field>
             <field name="res_model">silver.ap</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
                       <field name="view_id" ref="view_silver_ap_tree"/>
             <field name="context">{'search_default_group_by_node_id': 1}</field>
 
