--- a/silver_network/views/silver_box_views.xml
+++ b/silver_network/views/silver_box_views.xml
@@ -5,7 +5,7 @@
         <record id="action_silver_box" model="ir.actions.act_window">
             <field name="name">Cajas NAP</field>
             <field name="res_model">silver.box</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
 
             <field name="context">{'search_default_group_by_node_id': 1}</field>
         </record>
@@ -26,7 +26,7 @@
     </record>
 
         <record id="view_silver_box_tree" model="ir.ui.view">
-            <field name="name">silver.box.tree</field>
+            <field name="name">silver.box.list</field>
             <field name="model">silver.box</field>
             <field name="arch" type="xml">
                 <list string="Cajas NAP" default_order="name desc">
