--- a/silver_network/views/silver_cable_views.xml
+++ b/silver_network/views/silver_cable_views.xml
@@ -32,7 +32,7 @@
 
         <!-- Tree View -->
         <record id="silver_cable_view_tree" model="ir.ui.view">
-            <field name="name">silver.cable.tree</field>
+            <field name="name">silver.cable.list</field>
             <field name="model">silver.cable</field>
             <field name="arch" type="xml">
                 <list string="Cables">
@@ -47,7 +47,7 @@
         <record id="action_silver_cable" model="ir.actions.act_window">
             <field name="name">Cables</field>
             <field name="res_model">silver.cable</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
 
