--- a/silver_network/views/silver_core_port_line_views.xml
+++ b/silver_network/views/silver_core_port_line_views.xml
@@ -5,11 +5,11 @@
         <record id="action_silver_core_port_line" model="ir.actions.act_window">
             <field name="name">Líneas de Puerto de Core Silver</field>
             <field name="res_model">silver.core.port.line</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_silver_core_port_line_tree" model="ir.ui.view">
-            <field name="name">silver.core.port.line.tree</field>
+            <field name="name">silver.core.port.line.list</field>
             <field name="model">silver.core.port.line</field>
             <field name="arch" type="xml">
                 <list string="Líneas de Puerto de Core">
