--- a/silver_network/views/silver_core_views.xml
+++ b/silver_network/views/silver_core_views.xml
@@ -3,7 +3,7 @@
     <data>
 
         <record id="view_silver_core_tree" model="ir.ui.view">
-            <field name="name">silver.core.tree</field>
+            <field name="name">silver.core.list</field>
             <field name="model">silver.core</field>
             <field name="arch" type="xml">
                 <list string="Equipos Core" default_order="name asc" expand="1">
@@ -46,7 +46,7 @@
         <record id="action_silver_core" model="ir.actions.act_window">
             <field name="name">Equipos Core</field>
             <field name="res_model">silver.core</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
             <field name="view_id" ref="view_silver_core_tree"/>
             <field name="context">{'search_default_group_by_node_id': 1}</field>
             <field name="target">current</field>
