--- a/silver_network/views/silver_device_networks_views.xml
+++ b/silver_network/views/silver_device_networks_views.xml
@@ -5,11 +5,11 @@
         <record id="action_silver_device_networks" model="ir.actions.act_window">
             <field name="name">Redes de Dispositivos Silver</field>
             <field name="res_model">silver.device.networks</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_silver_device_networks_tree" model="ir.ui.view">
-            <field name="name">silver.device.networks.tree</field>
+            <field name="name">silver.device.networks.list</field>
             <field name="model">silver.device.networks</field>
             <field name="arch" type="xml">
                 <list string="Redes de Dispositivos">
