--- a/silver_network/views/silver_device_pool_ip_views.xml
+++ b/silver_network/views/silver_device_pool_ip_views.xml
@@ -5,11 +5,11 @@
         <record id="action_device_pool_ip" model="ir.actions.act_window">
             <field name="name">Pools de IP de Dispositivos</field>
             <field name="res_model">silver.device.pool.ip</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_device_pool_ip_tree" model="ir.ui.view">
-            <field name="name">silver.device.pool.ip.tree</field>
+            <field name="name">silver.device.pool.ip.list</field>
             <field name="model">silver.device.pool.ip</field>
             <field name="arch" type="xml">
                 <list string="Pools de IP de Dispositivos">
