--- a/silver_network/views/silver_ip_address_views.xml
+++ b/silver_network/views/silver_ip_address_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <!-- isp.ip.address Views -->
     <record id="silver_ip_address_view_tree" model="ir.ui.view">
-        <field name="name">silver.ip.address.tree</field>
+        <field name="name">silver.ip.address.list</field>
         <field name="model">silver.ip.address</field>
         <field name="arch" type="xml">
             <list string="Direcciones IP" default_order="public asc, ip_int asc">
@@ -90,7 +90,7 @@
     <record id="silver_ip_address_action" model="ir.actions.act_window">
         <field name="name">Direcciones IP</field>
         <field name="res_model">silver.ip.address</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="context">{'group_by': 'pool_id'}</field>
     </record>
 
