--- a/silver_network/views/silver_kex_algorithms_views.xml
+++ b/silver_network/views/silver_kex_algorithms_views.xml
@@ -5,11 +5,11 @@
         <record id="action_silver_kex_algorithms" model="ir.actions.act_window">
             <field name="name">Algoritmos Kex ISP</field>
             <field name="res_model">silver.kex.algorithms</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_silver_kex_algorithms_tree" model="ir.ui.view">
-            <field name="name">silver.kex.algorithms.tree</field>
+            <field name="name">silver.kex.algorithms.list</field>
             <field name="model">silver.kex.algorithms</field>
             <field name="arch" type="xml">
                 <list string="Algoritmos Kex ISP">
