--- a/silver_network/views/silver_node_views.xml
+++ b/silver_network/views/silver_node_views.xml
@@ -5,13 +5,13 @@
         <record id="action_silver_node" model="ir.actions.act_window">
             <field name="name">Nodos ISP</field>
             <field name="res_model">silver.node</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
 
         <!-- Vistas para silver.node -->
         <record id="view_silver_node_tree" model="ir.ui.view">
-            <field name="name">silver.node.tree</field>
+            <field name="name">silver.node.list</field>
             <field name="model">silver.node</field>
             <field name="arch" type="xml">
                 <list string="Nodos ISP" default_order="name asc">
