--- a/silver_network/views/silver_olt_card_port_views.xml
+++ b/silver_network/views/silver_olt_card_port_views.xml
@@ -5,11 +5,11 @@
         <record id="action_silver_olt_card_port" model="ir.actions.act_window">
             <field name="name">Puertos OLT</field>
             <field name="res_model">silver.olt.card.port</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_silver_olt_card_port_tree" model="ir.ui.view">
-            <field name="name">silver.olt.card.port.tree</field>
+            <field name="name">silver.olt.card.port.list</field>
             <field name="model">silver.olt.card.port</field>
             <field name="arch" type="xml">
                 <list string="Puertos OLT ISP" default_order="name desc">
