--- a/silver_network/views/silver_olt_users_views.xml
+++ b/silver_network/views/silver_olt_users_views.xml
@@ -5,11 +5,11 @@
         <record id="action_silver_olt_users" model="ir.actions.act_window">
             <field name="name">Usuarios de OLT ISP</field>
             <field name="res_model">silver.olt.users</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_silver_olt_users_tree" model="ir.ui.view">
-            <field name="name">silver.olt.users.tree</field>
+            <field name="name">silver.olt.users.list</field>
             <field name="model">silver.olt.users</field>
             <field name="arch" type="xml">
                 <list string="Usuarios de OLT ISP">
