--- a/silver_network/views/silver_olt_views.xml
+++ b/silver_network/views/silver_olt_views.xml
@@ -5,7 +5,7 @@
         <record id="action_silver_olt" model="ir.actions.act_window">
             <field name="name">Equipos OLT</field>
             <field name="res_model">silver.olt</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
             <field name="context">{'search_default_group_by_node_id': 1}</field>
         </record>
 
@@ -25,7 +25,7 @@
 
 
         <record id="view_silver_olt_tree" model="ir.ui.view">
-            <field name="name">silver.olt.tree</field>
+            <field name="name">silver.olt.list</field>
             <field name="model">silver.olt</field>
             <field name="arch" type="xml">
                 <list string="Equipos OLT ISP" default_order="name desc">
