--- a/silver_network/views/silver_post_views.xml
+++ b/silver_network/views/silver_post_views.xml
@@ -5,11 +5,11 @@
         <record id="action_silver_post" model="ir.actions.act_window">
             <field name="name">Postes</field>
             <field name="res_model">silver.post</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_silver_post_tree" model="ir.ui.view">
-            <field name="name">silver.post.tree</field>
+            <field name="name">silver.post.list</field>
             <field name="model">silver.post</field>
             <field name="arch" type="xml">
                 <list string="Poste" default_order="name desc">
