--- a/silver_network/views/silver_radius_line_views.xml
+++ b/silver_network/views/silver_radius_line_views.xml
@@ -5,11 +5,11 @@
         <record id="action_silver_radius_line" model="ir.actions.act_window">
             <field name="name">Líneas de Radius ISP</field>
             <field name="res_model">silver.radius.line</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_silver_radius_line_tree" model="ir.ui.view">
-            <field name="name">silver.radius.line.tree</field>
+            <field name="name">silver.radius.line.list</field>
             <field name="model">silver.radius.line</field>
             <field name="arch" type="xml">
                 <list string="Líneas de Radius ISP">
