--- a/silver_network/views/silver_radius_user_views.xml
+++ b/silver_network/views/silver_radius_user_views.xml
@@ -5,14 +5,14 @@
         <record id="action_silver_radius_user" model="ir.actions.act_window">
             <field name="name">RADIUS Users</field>
             <field name="res_model">silver.radius.user</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
               <!--field name="view_ids" eval="[(5, 0, 0), (0, 0, [ref('view_silver_radius_user_tree'), ref('view_silver_radius_user_form')])]" /-->
 
         </record>
 
         <!-- Tree view for isp.radius.user -->
         <record id="view_silver_radius_user_tree" model="ir.ui.view">
-            <field name="name">silver.radius.user.tree</field>
+            <field name="name">silver.radius.user.list</field>
                 <field name="model">silver.radius.user</field>
             <field name="arch" type="xml">
                 <list string="RADIUS Users">
