--- a/silver_network/views/silver_router_views.xml
+++ b/silver_network/views/silver_router_views.xml
@@ -4,7 +4,7 @@
 
         <!-- Tree View -->
         <!--record id="view_silver_router_tree" model="ir.ui.view">
-            <field name="name">silver.netdev.tree</field>
+            <field name="name">silver.netdev.list</field>
             <field name="model">silver.netdev</field>
             <field name="arch" type="xml">
                 <list string="Routers">
@@ -65,7 +65,7 @@
         <record id="action_silver_router" model="ir.actions.act_window">
             <field name="name">Routers</field>
             <field name="res_model">silver.netdev</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record-->
 
     </data>
