--- a/silver_network/views/silver_splitter_views.xml
+++ b/silver_network/views/silver_splitter_views.xml
@@ -5,11 +5,11 @@
         <record id="action_silver_splitter" model="ir.actions.act_window">
             <field name="name">Splitters</field>
             <field name="res_model">silver.splitter</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_silver_splitter_tree" model="ir.ui.view">
-            <field name="name">silver.splitter.tree</field>
+            <field name="name">silver.splitter.list</field>
             <field name="model">silver.splitter</field>
             <field name="arch" type="xml">
                 <list string="Splitter" default_order="name desc">
