--- a/silver_network/views/silver_tr_069_views.xml
+++ b/silver_network/views/silver_tr_069_views.xml
@@ -5,11 +5,11 @@
         <record id="action_silver_tr_069" model="ir.actions.act_window">
             <field name="name">Servidores TR-069 ISP</field>
             <field name="res_model">silver.tr.069</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_silver_tr_069_tree" model="ir.ui.view">
-            <field name="name">silver.tr.069.tree</field>
+            <field name="name">silver.tr.069.list</field>
             <field name="model">silver.tr.069</field>
             <field name="arch" type="xml">
                 <list string="Servidores TR-069 ISP">
