--- a/silver_network/views/silver_vlan_views.xml
+++ b/silver_network/views/silver_vlan_views.xml
@@ -5,11 +5,11 @@
         <record id="action_silver_vlan" model="ir.actions.act_window">
             <field name="name">VLANs ISP</field>
             <field name="res_model">silver.vlan</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="view_silver_vlan_tree" model="ir.ui.view">
-            <field name="name">silver.vlan.tree</field>
+            <field name="name">silver.vlan.list</field>
             <field name="model">silver.vlan</field>
             <field name="arch" type="xml">
                 <list string="VLANs ISP">
