--- a/silver_product/views/silver_hardware_model_views.xml
+++ b/silver_product/views/silver_hardware_model_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
         <record id="view_silver_hardware_model_tree" model="ir.ui.view">
-            <field name="name">silver.hardware.model.tree</field>
+            <field name="name">silver.hardware.model.list</field>
             <field name="model">silver.hardware.model</field>
             <field name="arch" type="xml">
                 <list string="Modelos">
@@ -43,7 +43,7 @@
         <record id="action_silver_hardware_model" model="ir.actions.act_window">
             <field name="name">Modelos</field>
             <field name="res_model">silver.hardware.model</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
     </data>
