--- a/silver_product/views/silver_onu_profile_views.xml
+++ b/silver_product/views/silver_onu_profile_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
         <record id="view_silver_onu_profile_tree" model="ir.ui.view">
-            <field name="name">silver.onu.profile.tree</field>
+            <field name="name">silver.onu.profile.list</field>
             <field name="model">silver.onu.profile</field>
             <field name="arch" type="xml">
                 <list string="ONU Profiles">
@@ -66,7 +66,7 @@
         <record id="action_silver_onu_profile" model="ir.actions.act_window">
             <field name="name">ONU Profiles</field>
             <field name="res_model">silver.onu.profile</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
     </data>
