--- a/silver_product/views/stock_production_lot_views.xml
+++ b/silver_product/views/stock_production_lot_views.xml
@@ -3,7 +3,7 @@
     <data>
 
         <record id="view_stock_production_lot_tree_silver" model="ir.ui.view">
-            <field name="name">stock.lot.tree.silver</field>
+            <field name="name">stock.lot.list.silver</field>
             <field name="model">stock.lot</field>
             <field name="arch" type="xml">
                 <list string="Lotes/Números Seriales" multi_edit="1">
@@ -20,7 +20,7 @@
         <record id="action_stock_production_lot_silver" model="ir.actions.act_window">
             <field name="name">Lotes/Números Seriales</field>
             <field name="res_model">stock.lot</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
             <field name="view_id" ref="view_stock_production_lot_tree_silver"/>
             <field name="context">{'search_default_group_by_product_id': 1}</field>
         </record>
