--- a/silver_provisioning/views/silver_core_views.xml
+++ b/silver_provisioning/views/silver_core_views.xml
@@ -13,11 +13,11 @@
 
 
                 </xpath-->
-<xpath expr="//field[@name='ip_address_ids']//tree" position="inside">
+<xpath expr="//field[@name='ip_address_ids']//list" position="inside">
     <field name="contract_id" widget="button" action="action_view_contract"/>
 
 </xpath>
-<xpath expr="//field[@name='ip_address_ids']//tree" position="attributes">
+<xpath expr="//field[@name='ip_address_ids']//list" position="attributes">
     <attribute name="default_order">contract_id asc, public asc, ip_int asc</attribute>
 </xpath>
 
@@ -45,7 +45,7 @@
         </record>
 
         <record id="view_silver_core_tree_provisioning_inherit" model="ir.ui.view">
-            <field name="name">silver.core.tree.provisioning.inherit</field>
+            <field name="name">silver.core.list.provisioning.inherit</field>
             <field name="model">silver.core</field>
             <field name="inherit_id" ref="silver_network.view_silver_core_tree"/>
             <field name="arch" type="xml">
