--- a/silver_ticket/views/silver_ticket_views.xml
+++ b/silver_ticket/views/silver_ticket_views.xml
@@ -4,7 +4,7 @@
 
         <!-- Tree View -->
         <record id="silver_ticket_tree_view" model="ir.ui.view">
-            <field name="name">silver.ticket.tree</field>
+            <field name="name">silver.ticket.list</field>
             <field name="model">silver.ticket</field>
             <field name="arch" type="xml">
                 <list string="Tickets">
@@ -53,7 +53,7 @@
         <record id="silver_ticket_action" model="ir.actions.act_window">
             <field name="name">Tickets</field>
             <field name="res_model">silver.ticket</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <!-- Menu -->
