--- a/silver_unms/views/silver_assignment_views.xml
+++ b/silver_unms/views/silver_assignment_views.xml
@@ -1,7 +1,7 @@
 <odoo>
     <data>
         <record id="silver_assignment_view_tree" model="ir.ui.view">
-            <field name="name">silver.assignment.view.tree</field>
+            <field name="name">silver.assignment.view.list</field>
             <field name="model">silver.assignment</field>
             <field name="arch" type="xml">
                 <list editable="bottom">
@@ -17,7 +17,7 @@
         <record id="silver_assignment_action" model="ir.actions.act_window">
             <field name="name">Asignaciones</field>
             <field name="res_model">silver.assignment</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
     </data>
 </odoo>
